@@ -883,6 +883,10 @@ Windows
 Mac
 ---
 
+- Removed the macfs module.  It had been deprecated since Python 2.5.  This
+  lead to the deprecation of macostools.touched() as it relied solely on macfs
+  and was a no-op under OS X.
+
 
 What's New in Python 2.5 release candidate 1?
 =============================================
